--- a/App.css
+++ b/App.css
@@ -36,3 +36,100 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  position: relative;
+  font-family: "Arial, sans-serif";
+  font-size: 16px;
+  color: white;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(https://www.pokemonunite.jp/assets/img/top/hero_v4.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  overflow: hidden; /* Ensure the pseudo-element covers the entire viewport */
+}
+
+.team-section {
+  margin: 10px 20px; /* Add horizontal margin to separate from the selection area */
+  flex: 1;
+  max-width: 45%;
+}
+
+.ban-container,
+.pick-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 0px; /* Optional: to add space between Bans and Picks */
+}
+
+.pokemon-selection {
+  display: flex;
+  justify-content: center;
+  padding: 100px; /* Add padding to adjust spacing between sections */
+}
+
+.dropdown {
+  display: flex;
+  justify-content: center;
+  margin: 12px 0;
+}
+
+.dropdown select {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: #333333;
+  color: #fff;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.banned {
+  position: relative;
+  opacity: 1;
+}
+
+.banned::after {
+  content: "";
+  position: absolute;
+  top: 42%;
+  left: -10px;
+  width: 100px;
+  height: 7px;
+  background-color: rgb(255, 0, 0);
+  transform: rotate(-45deg);
+}
+
+.confirm-button {
+  background-color: white; /* Green */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+  transition-duration: 0.4s;
+}
+
+.confirm-button:hover {
+  background-color: #4caf50;
+  color: white;
+  border: 2px solid white;
+}
