--- a/App.css
+++ b/App.css
@@ -13,6 +13,29 @@
   }
 }
 
+/* 全体のコンテナにスクロールを追加 */
+.app-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: auto;
+}
+
+.content-container {
+  flex: 1;
+}
+
+.pokemon-selection {
+  max-height: 60vh; /* 高さを制限してスクロールを許可 */
+  overflow-y: scroll;
+}
+
+/* 追加のスタイルで画面の高さに応じて要素が表示されるように */
+html,
+body {
+  height: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -49,7 +72,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: flex;
   overflow: hidden; /* Ensure the pseudo-element covers the entire viewport */
 }
 
@@ -64,28 +87,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 0px; /* Optional: to add space between Bans and Picks */
+  margin-bottom: 80px; /* Optional: to add space between Bans and Picks */
 }
 
 .pokemon-selection {
   display: flex;
   justify-content: center;
   padding: 100px; /* Add padding to adjust spacing between sections */
-}
-
-.dropdown {
-  display: flex;
-  justify-content: center;
-  margin: 12px 0;
-}
-
-.dropdown select {
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  background-color: #333333;
-  color: #fff;
 }
 
 @keyframes fadeOut {
@@ -97,6 +105,22 @@ body {
   }
 }
 
+/*プルダウン*/
+.dropdown {
+  display: flex;
+  justify-content: center;
+  margin: 12px 0;
+}
+
+.dropdown select {
+  font-size: 16px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: #333333;
+  color: #fff;
+}
+
+/*バンの斜線設定*/
 .banned {
   position: relative;
   opacity: 1;
@@ -113,8 +137,13 @@ body {
   transform: rotate(-45deg);
 }
 
+/*決定ボタン*/
 .confirm-button {
-  background-color: white; /* Green */
+  position: fixed;
+  bottom: 0; /* Adjusted from 10px to 0 to remove extra white space */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: white;
   border: none;
   color: black;
   padding: 15px 32px;
@@ -130,6 +159,46 @@ body {
 
 .confirm-button:hover {
   background-color: #4caf50;
+  color: white;
+  border: 2px solid white;
+}
+
+.undo-button,
+.reset-button {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+  transition-duration: 0.4s;
+  position: fixed;
+  bottom: 0; /* Adjusted from 10px to 0 to remove extra white space */
+}
+
+.undo-button {
+  right: calc(50% + 100px);
+  transform: translateX(-50%);
+}
+
+.reset-button {
+  left: calc(50% + 200px);
+  transform: translateX(-50%);
+}
+
+.undo-button:hover {
+  background-color: #f0ad4e;
+  color: white;
+  border: 2px solid white;
+}
+
+.reset-button:hover {
+  background-color: #d9534f;
   color: white;
   border: 2px solid white;
 }
